# hr-lang-graph

./: .gitignore  ANSWER.md  Makefile  README.md  langgraph.json  plan.md  pyproject.toml  solution.md
src/: app.py  clock.py  comms.py  db.py  llm.py  models.py  nodes.py  schemas.py  workflow.py
src/templates/: _process_widget.html  base.html  candidate.html  dashboard.html  inbox.html  logs.html
tests/: conftest.py  test_evals.py  test_llm.py  test_nodes.py  test_workflow_routing.py
